# todo-evolution

./: .dockerignore  .gitignore  CLAUDE.md  QWEN.md  README.md  merge-to-main.sh
.claude/agents/: README.md  acceptance-checker.md  cloud-native-blueprint.md  constitution-input.md  mcp-tool-builder.md  phase1-specification-input.md  python-cli-agent.md  spec-refiner.md  spec-validator.md  test-spec-writer.md
.specify/memory/: constitution.md
outlook-email-forwarder/: test_outlook_skill.py
outlook-email-forwarder/scripts/: outlook_client.py  outlook_mcp_server.py  requirements.txt
phase-1/: pyproject.toml
phase-1/src/todo/: __init__.py  commands.py  display.py  main.py  models.py  storage.py
phase-1/tests/: conftest.py  test_commands.py  test_models.py  test_storage.py
phase-2/: README.md  SESSION-1-SUMMARY.md  SESSION-2-SUMMARY.md  SESSION-3-SUMMARY.md
phase-2/backend/: .env.example  pyproject.toml
phase-2/frontend/: .env.local.example  README.md  better-auth.config.ts  package-lock.json  package.json
phase-3/backend/: .env.example  BUGFIX_SUMMARY.md  migrate_user_id.py  pyproject.toml  test_agent.py
phase-3/backend/alembic/: env.py
phase-3/backend/alembic/versions/: 002_create_better_auth_tables.py  003_add_conversation_tables.py
phase-3/backend/src/todo_api/: config.py  database.py  dependencies.py  main.py
phase-3/backend/src/todo_api/agent/: __init__.py
phase-3/backend/src/todo_api/mcp/: server.py
phase-3/backend/src/todo_api/models/: conversation.py  message.py  task.py
phase-3/backend/src/todo_api/services/: chat_service.py
phase-3/backend/tests/: test_agent_tools.py  test_chat_api.py  test_delete_task.py  test_guardrails.py  test_integration_t054.py  test_integration_t062.py  test_task_api.py  test_update_task.py  test_user_isolation.py
phase-3/frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
phase-4/: README.md
phase-4/backend/: .dockerignore  Dockerfile  README.md  RUN_TESTS.md  add_target_completion_date.py  run-test-t054.sh
phase-4/frontend/: .dockerignore  Dockerfile
phase-4/k8s/: namespace.yaml  secrets-template.yaml
(+287 files in other folders)
